# acpi-table-generator

./: CMakeLists.txt  README.md  TOOLS.md
.github/workflows/: build-and-upload-aml.yml
include/: acpi.h  common.h
include/common/: csrt.h  dbg2.h  gtdt.h  iort.h
lib/: utils.c
src/dummy/: csrt.c  dbg2.c  gtdt.c
test/: aml_validator.py  run_all_tests.py
tools/: hexdump.py
